[tool.poetry]
name = "businessbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
Pyrogram = "^2.0.30"
TgCrypto = "^1.2.3"
pypandoc = "^1.8.1"
emoji = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-bugbear = "^22.4.25"
pep8-naming = "^0.13.0"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.1"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8-mutable = "^1.2.0"
mypy = "^0.961"
blue = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.blue]
line-length = 88
preview = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
no_implicit_optional = true
